--- a/activities/activities.css
+++ b/activities/activities.css
@@ -1,7 +1,9 @@
-.body {
+.body, html {
     background-color: #ffffff;
     width: 100%;
+    overflow-x: hidden;
 }
+
 
 .top_img {
     margin: 0;
@@ -31,7 +33,10 @@
     font-weight: bolder;
     line-height: 1.5;
     letter-spacing: 5px;
+    text-transform: uppercase;
 }
+
+
 
 /*END TOP IMG*/
 .post {
@@ -43,7 +48,7 @@
     overflow: hidden;
 }
 
-.event_info{
+.event_info {
     padding: 20px 0;
 }
 
@@ -71,7 +76,7 @@
 
 .event_info h2 {
     font-weight: 800;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .event_info h3 {
@@ -123,7 +128,7 @@
     background-color: #029aba;
 }
 
-.separation{
+.separation {
     border: none;
     padding: 0.5px;
     color: #707070;
@@ -131,7 +136,7 @@
     margin: auto;
 }
 
-.i2{
+.i2 {
     object-fit: cover;
     height: 100%;
 }
@@ -175,64 +180,6 @@
 
 
 
-/* FOOTER */
-footer {
-    background-color: #242424;
-
-}
-
-.footer_div {
-    padding: 50px 0;
-    color: #e6e7e8;
-    background-size: 150% 100%;
-    background-image: url("../images/footer.png"); /* The image used */
-    /*background-color: black; !* Used if the image is unavailable *!*/
-    /* You must set a specified height */
-    background-position: bottom; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-}
-
-.footer_about {
-    padding: 20px;
-}
-
-.footer_about h3 {
-    padding: 10px 0;
-    font-weight: 500;
-}
-
-.footer_about p {
-    line-height: 1.5;
-    font-weight: 250;
-}
-
-.footer_about a {
-    text-decoration: none;
-    color: #e6e7e8;
-    line-height: 2;
-}
-
-.footer_about a:hover {
-    text-decoration: none;
-    font-weight: 500;
-    color: white;
-}
-
-.footer_icon {
-    padding: 10px;
-    border: 1px solid white;
-    border-radius: 50%;
-    margin: 5px 5px 5px 0;
-    transition: color 0.5s, background-color 0.5s;
-}
-
-.footer_icon:hover {
-    border-radius: 50%;
-    margin: 5px 5px 5px 0;
-    background-color: white;
-    color: #242424;
-}
-
 .creator {
     text-decoration: none;
     color: white;
@@ -249,8 +196,3 @@ footer {
     text-decoration: none;
     color: white;
 }
-
-
-
-
-
