--- a/clients/client.css
+++ b/clients/client.css
@@ -1,7 +1,9 @@
-.body {
+.body, html {
     background-color: #ffffff;
     width: 100%;
+    overflow-x: hidden;
 }
+
 
 .top_img {
     margin: 0;
@@ -32,6 +34,7 @@
     line-height: 1.5;
     letter-spacing: 5px;
 }
+
 
 /* clients top*/
 .client_head {
@@ -83,25 +86,25 @@
 }
 
 /* Clients */
-.client_section{
+.client_section {
     padding: 35px 0;
     text-align: center;
 }
 
-.client_section h2{
+.client_section h2 {
     font-weight: 800;
     letter-spacing: 2px;
     color: #216bac;
     text-transform: capitalize;
 }
 
-.h2_icon{
+.h2_icon {
     transform: scale(1.25);
     margin: auto 10px;
-    transition: transform 1s ;
+    transition: transform 1s;
 }
 
-.h2_icon:hover{
+.h2_icon:hover {
     transform: scale(1.4);
 }
 
@@ -109,91 +112,15 @@ ul {
     list-style-type: none;
 }
 
-.client_names_div{
+.client_names_div {
     color: #404040;
     text-align: left;
 }
 
-.client_names_div p:hover{
+.client_names_div p:hover {
     font-weight: 600;
 }
 
-.name_bullet{
-    margin-right:10px ;
-}
-
-
-/* FOOTER */
-footer {
-    background-color: #242424;
-
-}
-
-.footer_div {
-    padding: 50px 0;
-    color: #e6e7e8;
-    background-size: 150% 100%;
-    background-image: url("../images/footer.png"); /* The image used */
-    /*background-color: black; !* Used if the image is unavailable *!*/
-    /* You must set a specified height */
-    background-position: bottom; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-}
-
-.footer_about {
-    padding: 20px;
-}
-
-.footer_about h3 {
-    padding: 10px 0;
-    font-weight: 500;
-}
-
-.footer_about p {
-    line-height: 1.5;
-    font-weight: 250;
-}
-
-.footer_about a {
-    text-decoration: none;
-    color: #e6e7e8;
-    line-height: 2;
-}
-
-.footer_about a:hover {
-    text-decoration: none;
-    font-weight: 500;
-    color: white;
-}
-
-.footer_icon {
-    padding: 10px;
-    border: 1px solid white;
-    border-radius: 50%;
-    margin: 5px 5px 5px 0;
-    transition: color 0.5s, background-color 0.5s;
-}
-
-.footer_icon:hover {
-    border-radius: 50%;
-    margin: 5px 5px 5px 0;
-    background-color: white;
-    color: #242424;
-}
-
-.creator {
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    padding: 50px 30px 0;
-}
-
-.creator a {
-    text-decoration: none;
-    color: white;
-}
-
-.creator a:hover {
-    text-decoration: none;
-    color: white;
+.name_bullet {
+    margin-right: 10px;
 }
