--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,12 @@
-/*blue - #17479e*/
-/*light gray - #e6e7e8*/
-/*dark grey - #414042*/
-/* blue - #00324a; */
 
-.body {
+/*whatsaap end*/
+
+.body, html {
     background-color: #ffffff;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
     width: 100%;
 }
 
-/*#navbar_custom_offcanvas{*/
-/*    background-color: black;*/
-/*    color: white;*/
-/*}*/
 
 .top_img {
     margin: 0;
@@ -208,10 +202,10 @@
     margin: 0 auto;
     padding: 100px 0;
     text-align: center;
-    background-image: url("images/gray_back.jpg");
-    background-position: top; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover*/
+    /*background-image: url("images/gray_back.jpg");*/
+    /*background-position: top; !* Center the image *!*/
+    /*background-repeat: no-repeat; !* Do not repeat the image *!*/
+    /*background-size: cover; !* Resize the background image to cover*!*/
     box-shadow: inset 0px 40px 20px 0px white;
 }
 
@@ -838,6 +832,7 @@
     padding-left: 60px;
 }
 
+
 footer {
     background-color: #242424;
 
@@ -872,12 +867,13 @@ footer {
     text-decoration: none;
     color: #e6e7e8;
     line-height: 2;
+    transition: color .5s;
 }
 
 .footer_about a:hover {
     text-decoration: none;
     font-weight: 500;
-    color: white;
+    color: #216bac;
 }
 
 .footer_icon {
@@ -889,10 +885,8 @@ footer {
 }
 
 .footer_icon:hover {
-    border-radius: 50%;
-    margin: 5px 5px 5px 0;
-    background-color: white;
-    color: #242424;
+    background-color: #ffffff;
+    color: #216bac;
 }
 
 .creator {
